--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@types/node": "^14.14.2",
     "jest": "^26.6.1",
     "ts-jest": "^26.4.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-merge": "^5.2.0"
   }
 }
