--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
+    "closure-webpack-plugin": "^2.3.0",
+    "google-closure-compiler": "^20201006.0.0",
     "jest": "^26.6.1",
+    "terser-webpack-plugin": "^5.0.0",
     "ts-jest": "^26.4.2",
+    "ts-loader": "^8.0.6",
     "typescript": "^4.0.3",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
