--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Hermes Event Processor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild:development": "rimraf ./dist",
+    "prebuild:production": "rimraf ./dist",
+    "build:development": "webpack --mode=development",
+    "build:production": "webpack --mode=production"
   },
   "keywords": [
     "event-processing",
@@ -24,11 +28,12 @@
     "closure-webpack-plugin": "^2.3.0",
     "google-closure-compiler": "^20201006.0.0",
     "jest": "^26.6.1",
-    "terser-webpack-plugin": "^5.0.0",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^4.2.3",
     "ts-jest": "^26.4.2",
     "ts-loader": "^8.0.6",
     "typescript": "^4.0.3",
-    "webpack": "^5.2.0",
+    "webpack": "v4.44.2",
     "webpack-cli": "^4.1.0",
     "webpack-merge": "^5.2.0"
   }
