--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   ],
   "license": "GPL",
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
     "closure-webpack-plugin": "^2.3.0",
     "google-closure-compiler": "^20201006.0.0",
+    "husky": "^4.3.0",
     "jest": "^26.6.1",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^4.2.3",
