fix(tsconfig.json): fix erroneous folder name
tsconfig incorrectly referred to '__test__' now correctly refers to '__tests__'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["__test__", "dist"]
+  "exclude": ["__tests__", "dist"]
 }
