--- a/package.json
+++ b/package.json
@@ -35,11 +35,17 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "closure-webpack-plugin": "^2.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.12.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "google-closure-compiler": "^20201006.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
     "terser-webpack-plugin": "^4.2.3",
