--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Hermes Event Processor",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --fix",
     "test": "jest",
     "test:watch": "npm t -- --watch",
     "test:coverage": "npm t -- --collectCoverage",
@@ -11,6 +12,7 @@
     "prebuild:production": "rimraf ./dist",
     "build:development": "webpack --mode=development",
     "build:production": "webpack --mode=production",
+    "prerelease": "npm-run-all lint test",
     "release": "standard-version"
   },
   "keywords": [
@@ -26,7 +28,8 @@
   ],
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "npm-run-all lint test"
     }
   },
   "license": "MIT",
@@ -45,6 +48,7 @@
     "google-closure-compiler": "^20201006.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
