--- a/pipelines/build-pipeline.yml
+++ b/pipelines/build-pipeline.yml
@@ -4,7 +4,7 @@ resources:
       type: git
       source:
           uri: https://github.com/warren-sadler/hermes.git
-          branch: master
+          branch: feat/concourse-build
 jobs:
     - name: compile-app
       plan:
