--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "google-closure-compiler": "^20201006.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
+    "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
