--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
+  "include": ["src"],
   "exclude": ["__tests__", "dist"]
 }
