--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "terser-webpack-plugin": "^4.2.3",
     "ts-jest": "^26.4.2",
     "ts-loader": "^8.0.6",
+    "typedoc": "^0.19.2",
     "typescript": "^4.0.3",
     "webpack": "v4.44.2",
     "webpack-cli": "^4.1.0",
