--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@types/node": "^14.14.2",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "ibmmq": "^0.9.15"
   }
 }
