--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,13 +5,16 @@
   "main": "lib/index",
   "types": "lib/index",
   "scripts": {
+    "test": "jest",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.14.2",
+    "@types/node": "^14.14.3",
+    "jest": "^26.6.1",
+    "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
   },
   "dependencies": {
