--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix",
-    "test": "jest",
+    "test": "lerna run jest",
     "test:watch": "npm t -- --watch",
     "test:coverage": "npm t -- --collectCoverage",
     "prebuild:development": "rimraf ./dist",
@@ -55,6 +55,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "google-closure-compiler": "^20201006.0.0",
     "husky": "^4.3.0",
+    "ibmmq": "^0.9.15",
     "jest": "^26.6.1",
     "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
