--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "ibmmq": "^0.9.15"
+    "ibmmq": "^0.9.15",
+    "xmldom-ts": "^0.3.1",
+    "xpath-ts": "^1.3.13"
   }
 }
